--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             if (path.endsWith('index.html')) {
                 path = path.substr(path, path.length - 'index.html'.length);
             }
-            const instanceId = Math.random().toString(36).substring(2, 15);
-            const url = `https://play.workadventu.re/_/${instanceId}/${host}${path}map.json`;
+            // const instanceId = Math.random().toString(36).substring(2, 15);
+            const url = `https://play.workadventu.re/_/global/${host}${path}rmutl-map-abl.json`;
             document.getElementById('testMapURL').href = url;
             document.getElementById('testMapBtnURL').href = url;
             document.getElementById('testMapURL').innerText = url;
