--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
 
                 <div class="help">
-                    <a href="https://www.youtube.com/watch?v=lu1IZgBJJD4&list=PL7jmrMKZfjCnz36FvezxJ-Tshuh3Zz-nc&ab_channel=WorkAdventure"
+                    <a href="https://www.youtube.noselect svelte-1gbrq2dcom/watch?v=lu1IZgBJJD4&list=PL7jmrMKZfjCnz36FvezxJ-Tshuh3Zz-nc&ab_channel=WorkAdventure"
                         class="nes-btn is-primary" target="_blank">Watch tutorials</a>
                     <a href="https://discord.gg/G6Xh9ZM9aR" class="nes-btn is-primary" target="_blank">Talk to the
                         community</a>
